css/style.css
@charset "UTF-8";
/*
*
* Trunk version 2.0.0
*
*/
a:focus,
button:focus {
	outline: none !important;
}

button::-moz-focus-inner {
	border: 0;
}

*:focus {
	outline: none;
}

blockquote {
	padding: 0;
	margin: 0;
}

input,
button,
select,
textarea {
	outline: none;
}

label {
	margin-bottom: 0;
}

p {
	margin: 0;
}

ul,
ol {
	list-style: none;
	padding: 0;
	margin: 0;
}

ul li,
ol li {
	display: block;
}

dl {
	margin: 0;
}

dt,
dd {
	line-height: inherit;
}

dt {
	font-weight: inherit;
}

dd {
	margin-bottom: 0;
}

cite {
	font-style: normal;
}

form {
	margin-bottom: 0;
}

blockquote {
	padding-left: 0;
	border-left: 0;
}

address {
	margin-top: 0;
	margin-bottom: 0;
}

figure {
	margin-bottom: 0;
}

html p a:hover {
	text-decoration: none;
}

body {
	-webkit-text-size-adjust: none;
	-webkit-font-smoothing: subpixel-antialiased;
	font-size: 14px;
	font-family: "Poppins";
	line-height: 2;
	font-weight: 400;
	color: #333;
	
	padding-left: 100px; /* espaço à esquerda */
  padding-right: 100px; /* espaço à direita */

}

@media (min-width: 992px) {
	body {
		font-size: 1rem;
	}
}

a {
	display: inline-block;
	text-decoration: none;
	transition: .33s all ease;
}

a, a:active, a:focus {
	color: #63b2f5;
}

a:hover, a:focus {
	color: #000;
	text-decoration: none;
}

a[href*='callto'], a[href*='mailto'] {
	white-space: nowrap;
}

img {
	display: inline-block;
	max-width: 100%;
	height: auto;
}

hr {
	margin-top: 0;
	margin-bottom: 0;
	border-top: 1px solid #e0e0e2;
}

h1, h2, h3, h4, h5, h6, .heading-1, .heading-2, .heading-3, .heading-4, .heading-5, .heading-6 {
	margin-top: 0;
	margin-bottom: 0;
	font-family: "Poppins";
	font-weight: 600;
	color: #333;
	text-transform: uppercase;
	letter-spacing: .5px;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .heading-1 a, .heading-2 a, .heading-3 a, .heading-4 a, .heading-5 a, .heading-6 a {
	display: inline;
	font: inherit;
	letter-spacing: inherit;
}

h1 a, h1 a:active, h1 a:focus, h2 a, h2 a:active, h2 a:focus, h3 a, h3 a:active, h3 a:focus, h4 a, h4 a:active, h4 a:focus, h5 a, h5 a:active, h5 a:focus, h6 a, h6 a:active, h6 a:focus, .heading-1 a, .heading-1 a:active, .heading-1 a:focus, .heading-2 a, .heading-2 a:active, .heading-2 a:focus, .heading-3 a, .heading-3 a:active, .heading-3 a:focus, .heading-4 a, .heading-4 a:active, .heading-4 a:focus, .heading-5 a, .heading-5 a:active, .heading-5 a:focus, .heading-6 a, .heading-6 a:active, .heading-6 a:focus {
	color: inherit;
}

h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover, .heading-1 a:hover, .heading-2 a:hover, .heading-3 a:hover, .heading-4 a:hover, .heading-5 a:hover, .heading-6 a:hover {
	color: #63b2f5;
}

h1 > *, h2 > *, h3 > *, h4 > *, h5 > *, h6 > *, .heading-1 > *, .heading-2 > *, .heading-3 > *, .heading-4 > *, .heading-5 > *, .heading-6 > * {
	display: inline-block;
}

h1 span:not(:last-child), h2 span:not(:last-child), h3 span:not(:last-child), h4 span:not(:last-child), h5 span:not(:last-child), h6 span:not(:last-child), .heading-1 span:not(:last-child), .heading-2 span:not(:last-child), .heading-3 span:not(:last-child), .heading-4 span:not(:last-child), .heading-5 span:not(:last-child), .heading-6 span:not(:last-child) {
	margin-right: .25em;
}

h1,
.heading-1 {
	font-size: 30px;
	line-height: 1.2;
}

@media (min-width: 768px) {
	h1,
	.heading-1 {
		font-size: 56px;
		line-height: 1;
	}
}

@media (min-width: 1200px) {
	h1,
	.heading-1 {
		font-size: 74px;
	}
}

@media (min-width: 1400px) {
	h1,
	.heading-1 {
		font-size: 70px;
	}
}

h2,
.heading-2 {
	font-size: 26px;
	line-height: 1.3;
}

@media (min-width: 768px) {
	h2,
	.heading-2 {
		font-size: 32px;
		line-height: 1.16667;
	}
}

@media (min-width: 992px) {
	h2,
	.heading-2 {
		font-size: 44px;
	}
}

@media (min-width: 1200px) {
	h2,
	.heading-2 {
		font-size: 60px;
	}
}

h3,
.heading-3 {
	font-size: 22px;
	line-height: 1.45;
}

@media (min-width: 768px) {
	h3,
	.heading-3 {
		font-size: 28px;
	}
}

@media (min-width: 1200px) {
	h3,
	.heading-3 {
		font-size: 40px;
		line-height: 1.35;
	}
}

h4,
.heading-4 {
	font-size: 18px;
	line-height: 1.5;
	color: #333;
}

@media (min-width: 768px) {
	h4,
	.heading-4 {
		font-size: 24px;
		line-height: 1.5;
	}
}

@media (min-width: 1400px) {
	h4,
	.heading-4 {
		font-size: 30px;
		line-height: 1.43333;
	}
}

h5,
.heading-5 {
	font-size: 16px;
	font-weight: 600;
	line-height: 1.45;
	color: #333;
}

@media (min-width: 768px) {
	h5,
	.heading-5 {
		font-size: 20px;
		line-height: 1.5;
	}
}

h6,
.heading-6 {
	font-size: 14px;
	line-height: 1.6;
	color: #333;
}

@media (min-width: 768px) {
	h6,
	.heading-6 {
		font-size: 16px;
		line-height: 1.5;
	}
}

@media (min-width: 992px) {
	h6,
	.heading-6 {
		font-size: 18px;
		line-height: 1.44444;
	}
}

.heading-decorated::after {
	content: '';
	position: relative;
	display: block;
	height: 1px;
	width: 35px;
	margin-top: 15px;
	background: #63b2f5;
	will-change: transform, opacity;
}

.heading-decorated_center::after,
.parallax-header .heading-decorated::after,
.text-center .heading-decorated::after {
	margin-left: auto;
	margin-right: auto;
}

@media (min-width: 768px) {
	.heading-decorated::after {
		width: 50px;
	}
	h1.heading-decorated::before,
	.heading-1.heading-decorated::before {
		width: 115px;
	}
}

@media (min-width: 768px) {
	.text-sm-2 {
		-webkit-column-count: 2;
		-moz-column-count: 2;
		column-count: 2;
		-webkit-column-gap: 30px;
		-moz-column-gap: 30px;
		column-gap: 30px;
	}
}

@media (min-width: 1400px) {
	.text-sm-2 {
		-webkit-column-gap: 50px;
		-moz-column-gap: 50px;
		column-gap: 50px;
	}
}

.big {
	font-size: 18px;
}

small,
.small {
	display: block;
	font-size: 14px;
	line-height: 1.71429;
}

@media (min-width: 1200px) {
	small,
	.small {
		font-size: 16px;
		line-height: 1.625;
	}
}

code,
.code {
	padding: 1px 5px;
	border-radius: 0;
	font-family: "Poppins";
	color: #fff;
	background: #000;
}

/*
*
* Colors
* ==================================================
*/
.page .text-primary {
	color: #63b2f5;
}
/* ... */

